Capitolo 3 (da finire)

--- a/src/bibliografia.bib
+++ b/src/bibliografia.bib
@@ -19,3 +19,20 @@
     title   = {Docker},
     url     = {https://opensource.com/resources/what-docker}
 }
+
+@online{site:oracle,
+    title   = {Javadoc},
+    url     = {https://docs.oracle.com/javase/8/docs/technotes/tools/windows/javadoc.html}
+}
+
+@online{site:oasis,
+    title   = {SAML},
+    url     = {http://docs.oasis-open.org/security/saml/Post2.0/sstc-saml-tech-overview-2.0.html}
+}
+
+@online{site:json,
+    title   = {JSON},
+    url     = {https://www.json.org/json-en.html}
+}
+
+
