--- a/src/capitoli/capitolo-1.tex
+++ b/src/capitoli/capitolo-1.tex
@@ -147,12 +147,12 @@
 \subsection{Gestione di progetto}
     La gestione del progetto viene supportata principalmente da due strumenti:
     \begin{itemize}
-        \item \textbf{Atlassian Jira}: è un \textit{\gls{itsg}} molto avanzato che offre la possibilità di gestire tutto ciò che riguarda il \textit{\gls{frameworkg}} \textit{Scrum}, quindi gestione degli \textit{Sprint}, dei \textit{\gls{taskg}} e molto altro. Da \textbf{Jira} è inoltre possibile tracciare le ore impiegate per portare a termine ciascun \textit{\gls{taskg}} fornendo, al termine dello \textit{Sprint}, delle serie storiche con i tempi impiegati dai membri del team e il numero di \textit{\gls{taskg}} portati a termine rispetto a quelli previsti nello \textit{Sprint Backlog}; 
+        \item \textit{\textbf{Atlassian Jira}}: è un \textit{\gls{itsg}} molto avanzato che offre la possibilità di gestire tutto ciò che riguarda il \textit{\gls{frameworkg}} \textit{Scrum}, quindi gestione degli \textit{Sprint}, dei \textit{\gls{taskg}} e molto altro. Da \textbf{Jira} è inoltre possibile tracciare le ore impiegate per portare a termine ciascun \textit{\gls{taskg}} fornendo, al termine dello \textit{Sprint}, delle serie storiche con i tempi impiegati dai membri del team e il numero di \textit{\gls{taskg}} portati a termine rispetto a quelli previsti nello \textit{Sprint Backlog}; 
         \item \textbf{\gls{zcsg}}: offre, tra i tanti servizi, il calendario per la gestione degli eventi interni all'azienda, per esempio le riunioni e la possibilità di lavorare su documenti condivisi, per esempio i fogli di calcolo utilizzati per il tracciamento delle ore durante lo \textit{Sprint Planning} come descritto nella sezione precedente. 
     \end{itemize}
 
-\subsection{Documentazione}
-    La documentazione di tutti i team di sviluppo è raccolta in un unico punto accessibile a tutti. Per ottenere ciò viene utilizzato il \textit{software} di collaborazione \textbf{Confluence} sviluppato da \textbf{Atlassian}, il quale offre un editor di tipo \textit{\gls{wysiwygg}} che permette di scrivere documenti completi e ben formattati oltre a fornire un sistema di catalogazione molto flessibile e personalizzabile.
+\subsection{Documentazione}\label{sec:doc}
+    La documentazione di tutti i team di sviluppo è raccolta in un unico punto accessibile a tutti. Per ottenere ciò viene utilizzato il \textit{software} di collaborazione \textit{\textbf{Confluence}} sviluppato da \textit{\textbf{Atlassian}}, il quale offre un editor di tipo \textit{\gls{wysiwygg}} che permette di scrivere documenti completi e ben formattati oltre a fornire un sistema di catalogazione molto flessibile e personalizzabile.
 
 \newpage
 
