--- a/src/glossario.tex
+++ b/src/glossario.tex
@@ -48,7 +48,7 @@
     name=\glslink{saml}{SAML (Secuity Assertion Markup Language)},
     text=SAML,
     sort=saml,
-    description={\'E un protocollo bastato su \gls{xmlg} che permette lo scambio di messaggi per effettuare autenticazione e autorizzazione tra domini distinti. Tipicamente gli attori del procollo sono un \gls{idpg} che fornisce l'identità dell'utente da autenticare e un \gls{spg} che fornisce il servizio a cui l'utente ha richiesto l'accesso. }
+    description={\'E un protocollo bastato su \gls{xmlg} che permette lo scambio di messaggi per effettuare autenticazione e autorizzazione tra domini distinti. Tipicamente gli attori del procollo sono un \gls{idpg} che fornisce l'identità dell'utente da autenticare e un \gls{spg} che fornisce il servizio a cui l'utente ha richiesto l'accesso}
 }
 
 \newglossaryentry{ssog}
@@ -238,7 +238,7 @@
     name=\glslink{demog}{Demo},
     text=demo,
     sort=demo,
-    description={dimostrazione di in tempo reale di un prodotto, in questo caso di un \textit{software}}
+    description={Dimostrazione di in tempo reale di un prodotto, in questo caso di un \textit{software}}
 }
 
 \newglossaryentry{containerg}
@@ -246,9 +246,80 @@
     name=\glslink{containerg}{Container},
     text=container,
     sort=container,
-    description={un \textit{Docker} \textit{container} è un'unità \textit{software} che contiene un ambiente di esecuzione completo di librerie, dipendenze e configurazioni che è in grado di essere eseguito in modo sicuro e deterministico in altri ambienti \textit{Docker} ospitati su diverse macchine}
+    description={Dn \textit{Docker} \textit{container} è un'unità \textit{software} che contiene un ambiente di esecuzione completo di librerie, dipendenze e configurazioni che è in grado di essere eseguito in modo sicuro e deterministico in altri ambienti \textit{Docker} ospitati su diverse macchine}
 }
 
+\newglossaryentry{cosg}
+{
+    name=\glslink{cosg}{Class of Service},
+    text=classe di servizio,
+    sort=classe di servizio,
+    description={In \gls{zcsg}, una classe di servizio è un identificativo per un gruppo di utenti che condividono un insieme di permessi e proprietà}
+}
+
+\newglossaryentry{distlistg}
+{
+    name=\glslink{distlistg}{Distribution List},
+    text=liste di distribuzione,
+    sort=liste di distribuzione,
+    description={In \gls{zcsg}, una lista di ditribuzione è un meccanismo simile alla \textit{mailing list} classica disponibile sui \textit{server} di posta elettronica}
+}
+
+\newglossaryentry{restg}
+{
+    name=\glslink{restg}{REST API},
+    text=REST API,
+    sort=rest api,
+    description={Sono una tipologia di \textit{API} che utilizzano richieste \textit{HTTP} per lo scambio di informazioni}
+}
+
+\newglossaryentry{javadocg}
+{
+    name=\glslink{javadocg}{Javadoc},
+    text=javadoc,
+    sort=javadoc,
+    description={Strumento che permette di generare la documentazione in formato \textit{HTML} per il linguaggio \textit{Java}}
+}
+
+\newglossaryentry{openidg}
+{
+    name=\glslink{openidg}{OpenID},
+    text=OpenID,
+    sort=openid,
+    description={\'E un protocollo di autenticazione di autenticazione che permette di verificare l'identità di un utente, tramite l'ausilio di un \gls{idpg} che scambia informazioni con l'\gls{spg} nelle stesse modalità di \gls{restg}. In particolare, le informazioni riguardanti l'autenticazione di un utente, sono gestite tramite un \textit{JSON Web Token}\footnote{https://jwt.io/}}
+}
+
+\newglossaryentry{xmlschemag}
+{
+    name=\glslink{xmlschemag}{XML-Schema},
+    text=XML-Schema,
+    sort=xml schema,
+    description={Rappresenta la definizione della struttura di un particolare tipo di documento \gls{xmlg}. Tutti i documenti che utilizzano un certo \textit{schema} devono adeguarsi alle regole in esso definito}
+}
+
+\newglossaryentry{oauthg}
+{
+    name=\glslink{oauthg}{OAuth 2.0},
+    text=OAuth 2.0,
+    sort=oauthg,
+    description={Si tratta di un protocollo di autorizzazione, ovvero permette di autorizzare un utente ad accedere ad una particolare risorsa}
+}
+
+\newglossaryentry{endpointg}
+{
+    name=\glslink{endpointg}{Endpoint},
+    text=endpoint,
+    sort=endpoint,
+    description={L'\textit{endpoint} è un \textit{URL} sul quale è possibile raggiungere un servizio}
+}
+
+\newglossaryentry{jsong}
+{
+    name=\glslink{jsong}{JSON (JavaScript Object Notation)},
+    text=JSON,
+    sort=jsong,
+    description={\'E uno \textit{standard} che definisce un formato per \textit{file} che permette di rappresentare oggetti composti da coppie chiave-valore ed \textit{array}. Questo formato è molto utilizzato nello scambio di dati \textit{client}/\textit{server} e viene spesso preferito al formato \gls{xmlg} essendo meno verboso}
+}
 
 %**************************************************************
 % Acronimi
